--- a/css/header.css
+++ b/css/header.css
@@ -14,19 +14,26 @@
   position: relative;
   z-index: 2;
   height: 56px;
-  display: grid;
-  grid-template-columns: auto auto 1fr;
+  display: flex;
   background-color: var(--header-color);
   align-items: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding-left: 12px;
   padding-right: 13px;
+  gap: 12px;
 }
 .header__title {
-  margin-left: 12px;
   font-size: 24px;
   line-height: 28px;
 }
+.header__edit,
 .header__add {
-  justify-self: self-end;
+  flex: 1;
+  position: absolute;
+  right: 12px;
+  top: 15px;
+}
+.header__back,
+.header__menu {
+  margin-top: 5px;
 }
