--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,8 @@
 .main {
   height: 762px;
   background-color: var(--main-color);
+}
+.container {
   padding: 24px 12px;
   display: flex;
   gap: 16px 0;
@@ -12,7 +14,7 @@
   padding-right: 12px;
   width: 404px;
   height: 108px;
-  border: 1px solid #a77c5d;
+  border: 1px solid var(--button_border-color);
   box-shadow: 0px 4px 4px var(--shadows-color);
   border-radius: 12px;
   display: flex;
@@ -30,7 +32,7 @@
   align-items: start;
 }
 .info__edit:hover {
-  background-color: antiquewhite;
+  background-color: var(--edit_hover-color);
 }
 .account__name {
   font-size: 24px;
