--- a/css/view.css
+++ b/css/view.css
@@ -3,8 +3,6 @@
   height: 762px;
   background-color: var(--main-color);
   padding: 23.5px 12.4px;
-  display: flex;
-  flex-direction: column;
 }
 .container {
   display: flex;
@@ -35,7 +33,7 @@
 }
 .footer__hr {
   width: 428px;
-  border: 1px solid #a77c5d;
+  border: 1px solid var(--border-color);
 }
 .footer__buttons {
   position: relative;
